# TMA4280

./: .gitignore  README.md
Oving4/: CMakeLists.txt  compile.sh  job.sh  main.c  mpi.c  openmp.c  serial.c
Oving6/: CMakeLists.txt  compile.sh  job.sh
